--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ ul {
     margin: 10px;
     color: #000;
     background: #fff;
-    background: rgba(255, 255, 255, 0.5);
+/*    background: rgba(255, 255, 255, 0.5);*/
     border-radius: 10px;
 }
 #menu li.active {
@@ -307,4 +307,8 @@ li.homes {
 .services
 {
     padding-top: 20px;
+}
+
+.pp-tableCell {
+  background-color: #fff;
 }
